--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
       </a>
     </div>
 
-    <div class="section-title">Links</div>
+    <div class="section-title">Materials</div>
     <div class="link-text">
-      <a href="rvx_install_manual.html">Install Manual</a>
+      <a href="rvx_install_manual_en.html">Install Manual (English)</a>
+      <a href="rvx_install_manual_ko.html">Install Manual (Korean)</a>
       <a href="https://rvx.coreicc.net/wiki" target="_blank">Wiki</a>
     </div>
   </div>
